--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
   </head>
 
   <body>
+    <% if user_signed_in? %>
+      <%= form_tag(destroy_user_session_path, method: :delete) do %>
+        <%= submit_tag 'Sign Out' %>
+      <% end %>
+    <% else %>
+      <%= link_to "Sign In", new_user_session_path %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
