--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,26 +1,7 @@
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-  <script>
-    var app = angular.module('myApp', []);
-
-    app.controller('MessagesController', function($scope, $http) {
-      $http.get('/messages.json').then(function(response) {
-        $scope.messages = response.data;
-      });
-    });
-  </script>
 
 <body ng-app="myApp">
-  <div ng-controller="MessagesController">
-
-    <h1>All Messages</h1>
-
-    <div ng-repeat="message in messages">
-      <strong>To:</strong> {{ message.to }}<br>
-      <strong>Message:</strong> {{ message.text }}<br>
-      <strong>Sent:</strong> {{ message.created_at | date:'medium' }}
-      <hr>
+    <div ng-controller="MessagesController" style="display: flex;">
+        <%= render 'message_form' %>
+        <%= render 'message_list' %>
     </div>
-
-  </div>
 </body>
-
