--- a/app/views/messages/_message_form.html.erb
+++ b/app/views/messages/_message_form.html.erb
@@ -3,7 +3,7 @@
     <form ng-submit="sendMessage()">
         <div class="form-group">
             <label for="phone-number">Phone Number:</label>
-            <input type="text" id="to" ng-model="newMessage.to">
+            <input type="text" id="recipient_phone" ng-model="newMessage.recipient_phone">
         </div>
 
         <div class="form-group">
@@ -13,7 +13,9 @@
 
         <div class="form-group">
             <button type="submit">Submit</button>
-            <button type="button" ng-click="showNewMessageForm = false">Cancel</button>
+            <%# <button type="button" ng-click="showNewMessageForm = false">Clear</button> %>
+            <%# <button ng-click="clear()">Clear</button> %>
+            <button type="button" ng-click="clear()">Clear</button>
         </div>
     </form>
 </div>
