--- a/app/assets/stylesheets/message.css
+++ b/app/assets/stylesheets/message.css
@@ -1,18 +1,22 @@
 .border-box {
  background-color: white;
- padding: 20px;
+ padding: 15px;
  border: 1px solid #ccc;
  border-radius: 10px;
- box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+ box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+ margin: 15px;
+ max-width: 90vh;
+ max-height: 70vh;
+ word-wrap: break-word;
+ overflow: hidden;
 }
 
-.left-side {
+.left-side, .right-side {
  flex: 1;
- padding: 20px;
+ padding: 15px;
  display: flex;
  flex-direction: column;
  align-items: center;
- text-align: center;
 }
 
 .left-side h2 {
@@ -23,13 +27,12 @@
 .left-side .form-group textarea {
  width: 100%;
  padding: 15px;
- border: 2px solid #007bff;
  border-radius: 8px;
  font-size: 18px;
 }
 
 .left-side .form-group button[type="submit"] {
- background-color: #007bff;
+ background-color: black;
  color: #fff;
  border: none;
  padding: 12px 24px;
@@ -38,24 +41,20 @@
  cursor: pointer;
 }
 
-.left-side .form-group button[type="submit"]:hover {
- background-color: #0056b3;
-}
-
 .right-side {
- flex: 1;
- padding: 20px;
- display: flex;
- flex-direction: column;
+ overflow-y: auto;
 }
 
 .right-side .message-box {
  background-color: white;
- padding: 20px;
+ padding: 15px;
  border: 1px solid #ccc;
  border-radius: 5px;
- box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
- margin-bottom: 20px;
+ box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+ margin-bottom: 15px;
+ word-wrap: break-word;
+ overflow: hidden;
+ width: 300px;
 }
 
 .right-side .message-info {
@@ -66,4 +65,51 @@
 
 .right-side .message-info .message-number {
  font-weight: bold;
+}
+
+.header-container {
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ padding: 10px 0;
+}
+
+.auth-actions {
+ text-align: center;
+ padding-right: 10px;
+}
+
+.auth-actions form {
+ margin-bottom: 10px;
+}
+
+.clear-btn {
+ background: none;
+ border: none;
+ cursor: pointer;
+ text-decoration: none;
+}
+
+.clear-btn:hover {
+ text-decoration: underline;
+}
+
+.button-group {
+ display: flex;
+ justify-content: space-between;
+ width: 100%;
+}
+
+input[type="submit"][value="Sign Out"] {
+ background-color: black;
+ color: #fff;
+ border: none;
+ padding: 12px 24px;
+ border-radius: 8px;
+ font-size: 20px;
+ cursor: pointer;
+}
+
+body {
+ font-family: Arial, sans-serif;
 }
