--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,6 +1,5 @@
-
-<body ng-app="myApp">
-    <div ng-controller="MessagesController" style="display: flex;">
+<body ng-app="myApp" style="background-color: #f5f5f5;">
+    <div ng-controller="MessagesController" style="display: flex; justify-content: center;">
         <%= render 'message_form' %>
         <%= render 'message_list' %>
     </div>
