--- a/app/assets/stylesheets/message.css
+++ b/app/assets/stylesheets/message.css
@@ -29,6 +29,7 @@
  padding: 15px;
  border-radius: 8px;
  font-size: 18px;
+ margin-bottom: 10px;
 }
 
 .left-side .form-group button[type="submit"] {
@@ -36,7 +37,7 @@
  color: #fff;
  border: none;
  padding: 12px 24px;
- border-radius: 8px;
+ border-radius: 50px;
  font-size: 20px;
  cursor: pointer;
 }
@@ -105,11 +106,16 @@ input[type="submit"][value="Sign Out"] {
  color: #fff;
  border: none;
  padding: 12px 24px;
- border-radius: 8px;
+ border-radius: 50px;
  font-size: 20px;
  cursor: pointer;
 }
 
 body {
  font-family: Arial, sans-serif;
+}
+.date-created, .character-count {
+ font-size: 12px;
+ color: #888;
+ text-align: right;
 }
