--- a/app/views/messages/_message_form.html.erb
+++ b/app/views/messages/_message_form.html.erb
@@ -1,7 +1,6 @@
 <div class="border-box left-side">
     <h2>New Message</h2>
     <form ng-submit="sendMessage()">
-
         <div class="form-group">
             <label for="phone-number">Phone Number:</label>
             <input type="text" id="recipient_phone" ng-model="newMessage.recipient_phone">
@@ -12,10 +11,15 @@
             <textarea id="text" ng-model="newMessage.text"></textarea>
         </div>
 
+        <div class="character-count">
+            {{ newMessage.text.length }} out of 250 characters
+        </div>
+
+        <div class="error-message" ng-if="errorMessage">{{ errorMessage }}</div>
+
         <div class="form-group button-group">
             <button type="button" ng-click="clear()" class="clear-btn">Clear</button>
             <button type="submit" class="submit-btn">Submit</button>
         </div>
-
     </form>
 </div>
