--- a/app/assets/stylesheets/message.css
+++ b/app/assets/stylesheets/message.css
@@ -5,7 +5,7 @@
  border-radius: 10px;
  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
  margin: 15px;
- max-width: 90vh;
+ max-width: 70vh;
  max-height: 70vh;
  word-wrap: break-word;
  overflow: hidden;
@@ -99,6 +99,7 @@
  display: flex;
  justify-content: space-between;
  width: 100%;
+ padding-top: 10px;
 }
 
 input[type="submit"][value="Sign Out"] {
@@ -119,3 +120,9 @@ body {
  color: #888;
  text-align: right;
 }
+
+.character-count {
+ font-size: 10px;
+ margin-top: -7px;
+}
+
