--- a/app/views/messages/_message_form.html.erb
+++ b/app/views/messages/_message_form.html.erb
@@ -12,7 +12,7 @@
         </div>
 
         <div class="character-count">
-            {{ newMessage.text.length }} out of 250 characters
+            {{ newMessage.text.length }}/250
         </div>
 
         <div class="error-message" ng-if="errorMessage">{{ errorMessage }}</div>
