--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,4 @@
-<body ng-app="myApp" style="background-color: #f5f5f5;">
+<body ng-app="SMSMessengerApp" style="background-color: #f5f5f5;">
     <div ng-controller="MessagesController" style="display: flex; justify-content: center;">
         <%= render 'message_form' %>
         <%= render 'message_list' %>
