--- a/app/assets/stylesheets/message.css
+++ b/app/assets/stylesheets/message.css
@@ -103,13 +103,19 @@
 }
 
 input[type="submit"][value="Sign Out"] {
- background-color: black;
- color: #fff;
+ background: none;
+ color: inherit;
  border: none;
- padding: 12px 24px;
- border-radius: 50px;
- font-size: 20px;
+ font-size: inherit;
+ padding: 0;
  cursor: pointer;
+ text-decoration: none;
+ border-radius: 0;
+ transition: text-decoration 0.3s;
+}
+
+input[type="submit"][value="Sign Out"]:hover {
+ text-decoration: underline;
 }
 
 body {
